# multimodal-chat

./: .gitignore  Dockerfile  Makefile  README.md  app.json  app.py  cloudbuild.yaml  picasso.py  pyproject.toml  requirements.txt  run.docker.sh  run.local.sh  run.sh  setup.sh
app/: main.py  picasso.py
scripts/: enable-service-public-access.sh  setup.sh
